--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "antd": "^5.20.0",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "drift-zoom": "^1.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-image-gallery": "^1.3.0",
+    "react-image-zoom": "^1.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
