--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "doan",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://sy-nguyen.github.io/ReactJS_DoAn/",
   "dependencies": {
+    "-": "^0.0.1",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@reduxjs/toolkit": "^2.2.7",
@@ -13,6 +15,7 @@
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "drift-zoom": "^1.5.1",
+    "gh-pages": "^6.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
@@ -32,7 +35,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
